# server_upload

./: Cargo.toml  README.md
other/: notify-send
src/: main.rs
