[package]
name = "server_upload"
version = "0.1.0"
authors = ["thomasthethermonuclearbomb <morrissebestyen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.4", features = ["serde", "v4"] }
subprocess = "0.2.6"
